--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -13,12 +13,18 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: npm install and build webpack
+        run: |
+          npm install
+          npm run build
+  test:    
 
     strategy:
       matrix:
         node-version: [14.x]
         os: [ubuntu-latest, windows-2016]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
     - uses: actions/checkout@v3
@@ -27,6 +33,9 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test -- -u
+    - name: npm install and test
+      run: |
+        npm install
+        npm test -- -u
+      env:
+        CI: true
