--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -19,7 +19,14 @@ jobs:
         run: |
           npm install
           npm run build
+      - uses: actions/upload-artifact@master
+       with:
+         name: webpack artifacts
+         path: public/
+
   test:    
+    runs-on: ubuntu-latest
+    needs: build
 
     strategy:
       matrix:
@@ -28,6 +35,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - uses: actions/download-artifact@master
+       with:
+         name: webpack artifacts
+         path: public
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
       with:
